  that resulted, but I didn't really keep track of them
* Fixed a bug with parsing AND/OR keywords in conditionals when they were
  followed by round brackets
* Fixed assignments not handling multi-line values correctly
* Fixed parameter parsing issue when a plugin name was all uppercased
* Fixes assignments failing with autoEscape enabled

[2008-12-24] 1.0.1
* Direct assignments like {$foo = 5} now allow spaces around the operator
* Fixed a {foreach} bug with the implode argument
* Fixed modulo operator in if statements
* Fixed date_format handling of negative and small unix timestamps
* Fixed a weird reference bug with ZF and includes.. whatever but thanks
  to Denis Arh for the patch

[2008-10-23] 1.0.0
! BC Break: Small one that probably won't affect anyone, but it makes the
  PluginProxy feature much stronger. Basically if you used a custom one you
  will get a fatal error and need to update it to conform to the new
  IPluginProxy interface, that's it
+ Compiler: the modifier syntax (|foo) can now be applied on functions and on
  complex variables i.e. {$obj->getStuff()|upper} or {lower('foo')|upper}
+ SmartyCompat: Added a {section} plugin but I strongly discourage using it,
  it was really made to support legacy templates, since {for} doesn't have to
  handle {section}-BC anymore, it has been cleaned up a lot and the last
  $skip parameter has been dropped
* The core Dwoo class doesn't need writable compile/cache dirs in the
  constructor anymore so you can provide custom ones later through
  ->setCompile(/Cache)Dir - thanks to Denis Arh for the patch
* Adapters: Zend: major overhaul thanks to Denis Arh, templates files should
  probably be moved in the scripts subfolder after this update though, and
  the settings array has changed a bit, you will get warnings if you don't
  update the code anyway
* Plugins: improved the dump plugin, it now displays object's properties
  and optionally public methods (if the new show_methods arg is set to true)